syntax = "proto3";
package lavanet.lava.spec;

option go_package = "github.com/lavanet/lava/x/spec/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";

message ApiCollection {
  bool enabled = 1;
  CollectionData collectionData =2 [(gogoproto.nullable) = false];
  repeated Api apis = 3;
  repeated Header headers = 4;
	repeated CollectionData inheritanceApis = 5; // by collectionKey
	float compute_units_multiplier = 6;
	repeated Parsing parsing = 7;
}

message CollectionData {
  string api_interface = 1;
  string internal_path = 2;
  string type = 3;
	string add_on = 4;
}

message Header {
	string name = 1;
	
	enum HeaderType {
    pass = 0;
  }

	HeaderType kind = 2;
}

message Api {
  bool enabled = 1; 
  string name = 2; 
  uint64 compute_units = 3; 
  uint64 extra_compute_units = 4;
  SpecCategory category = 6 [(gogoproto.nullable) = false];
	BlockParser block_parsing = 7 [(gogoproto.nullable) = false];
}

message Parsing {
  string function_tag = 1;
  string function_template = 2;
  BlockParser result_parsing = 3 [(gogoproto.nullable) = false];
  Api api = 4;
}

message BlockParser {
  repeated string parser_arg = 1;
  PARSER_FUNC parser_func = 2;
  string default_value = 3; // default value when set allows parsing failures to assume the default value
  string encoding =4; // used to parse byte responses: base64,hex,bech32
}

enum PARSER_FUNC{
  EMPTY = 0;
  PARSE_BY_ARG = 1; //means parameters are ordered and flat expected arguments are: [param index] (example: PARAMS: [<#BlockNum>,"banana"]) args: 0
  PARSE_CANONICAL = 2; //means parameters are ordered and one of them has named properties, expected arguments are: [param index to object,prop_name in object] (example: PARAMS: ["banana",{prop_name:<#BlockNum>}]) need to configure args: 1,"prop_name"
  PARSE_DICTIONARY = 3; //means parameters are named, expected arguments are [prop_name,separator] (example: PARAMS: {prop_name:<#BlockNum>,prop2:"banana"}) args: "prop_name"
  PARSE_DICTIONARY_OR_ORDERED = 4; //means parameters are named expected arguments are [prop_name,separator,parameter order if not found] for input of: block=15&address=abc OR ?abc,15 we will do args: block,=,1
  // reserved
  DEFAULT = 6; //means parameters are non related to block, and should fetch latest block args: "latest"
}

message SpecCategory{
  bool deterministic = 1;
  bool local = 2;
  bool subscription = 3;
  uint32 stateful = 4;
  bool hanging_api = 5;
}

