syntax = "proto3";
package chainTracker;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
option go_package = "./chaintracker";

service ChainTrackerService {
    rpc GetLatestBlockNum (google.protobuf.Empty) returns (google.protobuf.UInt64Value ) {}
    rpc GetLatestBlockData (LatestBlockData) returns (LatestBlockDataResponse){}
}

message LatestBlockData {
    int64 fromBlock =1;
    int64 toBlock =2;
    int64 specificBlock =3;
}

message LatestBlockDataResponse {
    int64 latestBlock =1;
    repeated BlockStore requestedHashes  =2;
}

message BlockStore {
    int64 block =1;
    string hash =2;
}